update other works

--- a/otherProjectsPages/oProj-futureOfGreens.html
+++ b/otherProjectsPages/oProj-futureOfGreens.html
@@ -84,18 +84,14 @@
                                 dwindling natural environments. The multimedia installation comprises a virtual
                                 environment, blending nature with mechanics, and a physical installation replicating a
                                 traditional natural setting using industrial materials.</p>
-                            <p class="keywords">
-                                <strong>Key Words:</strong><br>
-                                Immersive Video,
-                                Anthropocene,
-                                Nature-Mechanics Interface
-                                <br>
-                            </p>
                         </div>
                         <div class="right-column">
                             <p class="tags"><strong>Spring 2022</strong><br>
                                 <br>
-                                <strong>Technology:</strong><br>
+                                <strong>Key Words:</strong><br>
+                                Immersive Video<br>
+                                Anthropocene<br>
+                                Nature-Mechanics Interface<br>
                                 Unity<br>
                                 <br>
                                 <strong>Group Project</strong><br>
@@ -125,9 +121,10 @@
                 </div>
                 <!-- --------------------------------------------------------------------------------- -->
                 <!-- --------------------------------------------------------------------------------- -->
+                <br><br>
                 <div class="align-center">
                     <div class="oProj-pdfEmbed">
-                        <h2 class="subTitle">Research & Report Paper</h2>
+                        <h2 class="oPorj-subTitle">Research & Report Paper</h2>
                         <iframe class="pdf-container"
                             src="../assets/otherWorks/futureOfGreens/futureOfGreensPaper.pdf"></iframe>
                     </div>
