--- a/otherProjectsPages/oProj-woodenMandala.html
+++ b/otherProjectsPages/oProj-woodenMandala.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>True Dream Home</title>
+    <title>Wooden Mandala</title>
     <link rel="stylesheet" href="../styles-general.css">
     <link rel="stylesheet" href="../styles-projectPage.css">
     <link rel="stylesheet" href="../css/styles-otherProjectPage.css">
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:wght@100..900&display=swap"
         rel="stylesheet">
 </head>
 
@@ -57,8 +57,12 @@
     <div class="content-body">
         <div class="all-content">
             <div class="oProj-header">
-                <h1 class="oPorj-title">Project Title</h1>
-                <p class="oProj-subtitle">Subtitle</p>
+                <h1 class="oPorj-title">Wooden Mandala</h1>
+                <p class="oProj-subtitle">
+                    Research project with
+                    <a href="https://aaron-sherwood.com/" style="color: inherit">Aaron Sherwood</a><br>
+                    A Kinetic Installation Interact with Human Breath
+                </p>
             </div>
             <hr>
         </div>
@@ -67,54 +71,73 @@
 
     <!-- ========================================================================================== -->
     <div class="content-body">
-        <div class="all-content">
-
+        <div class="oPorj-all-content">
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
-            <div class="oProj-content">
-                <div class="video">
-                    <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+            <div class="align-center">
+                <div class="oProj-featureImage">
+                    <img src="../assets/otherWorks/woodenMandala/featureImage.jpg" alt="Feature Image">
                 </div>
-                <div class="align-center">
-                    <div class="oProj-headerContent">
-                        <div class="left-column">
-                            <p class="shortDescription">description*** </p>
-                        </div>
-                        <div class="right-column">
-                            <p class="tags"><strong>time ***</strong><br>
-                                <br>
-                                <strong>Key Words:</strong><br>
-                                keywords<br>
-                                <br>
-                                <strong>Individual/***Group Project</strong>
-                            </p>
-                        </div>
+            </div>
+            <div class="align-center">
+                <div class="oProj-headerContent">
+                    <div class="left-column">
+                        <p class="shortDescription">"Wooden Mandala" by Aaron Sherwood, is an immersive kinetic
+                            installation with 300 walnut pieces arranged in a Fibonacci spiral on an 8ft diameter
+                            birch wall. Breath-tracking technology responds to users' inhalations, synchronizing
+                            dynamic sound and visual animations with the wooden pieces. In Fall 2022, I focused on
+                            physical computing, constructing and fine-tuning each wooden piece with manual skills
+                            like soldering and drilling. Collaborating with the team, I ensured the seamless
+                            integration of 300+ motors. Responsibilities included debugging, calibrating hardware,
+                            and refining the hardware-software connection. </p>
+                    </div>
+                    <div class="right-column">
+                        <p class="tags"><strong>Fall 2022</strong><br>
+                            <br>
+                            <strong>Key Words:</strong><br>
+                            Kinetic Installation<br>
+                            Physical Computing<br>
+                            Computer Vision<br>
+                            Breath Tracking<br>
+                            <br>
+                            <strong>Role</strong><br>
+                            Research Assistant<br>
+                            <br>
+                            <a href="https://www.aaron-sherwood.com/works/mandala/" style="color: inherit">Porject
+                                Link</a>
+                        </p>
                     </div>
                 </div>
+            </div>
+
+            <div class="videoShowcase">
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/tsIBHcMbRZQ" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="subSection">
+                <h2 class="oPorj-subTitle">Process</h2>
                 <div class="align-center">
-                    <div class="oProj-keyImagecontainer">
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 1">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 2">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 3">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 4">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 5">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 6">
-                        </div>
+                    <div class="oProj-detailedImage">
+                        <img src="../assets/otherWorks/woodenMandala/key1.jpg" alt="Feature Image">
+                    </div>
+                </div>
+                <br><br>
+                <div class="align-center">
+                    <div class="oProj-detailedImage">
+                        <img src="../assets/otherWorks/woodenMandala/key2.jpg" alt="Feature Image">
+                    </div>
+                </div>
+                <br><br>
+                <div class="align-center">
+                    <div class="oProj-detailedImage">
+                        <img src="../assets/otherWorks/woodenMandala/key3.jpg" alt="Feature Image">
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <!-- Gallery ends -->
     <!-- ========================================================================================== -->
