--- a/otherProjectsPages/fineartPages/snacks.html
+++ b/otherProjectsPages/fineartPages/snacks.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>True Dream Home</title>
+    <title>Other Project Template</title>
     <link rel="stylesheet" href="../styles-general.css">
     <link rel="stylesheet" href="../styles-projectPage.css">
     <link rel="stylesheet" href="../css/styles-otherProjectPage.css">
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:wght@100..900&display=swap"
         rel="stylesheet">
 </head>
 
@@ -78,13 +78,18 @@
                 <div class="align-center">
                     <div class="oProj-headerContent">
                         <div class="left-column">
-                            <p class="shortDescription">description*** </p>
+                            <p class="shortDescription">elevator pitch***</p>
+                            <p class="keywords">
+                                <strong>Key Words:</strong><br>
+                                keywords***<br>
+                                <br>
+                            </p>
                         </div>
                         <div class="right-column">
                             <p class="tags"><strong>time ***</strong><br>
                                 <br>
-                                <strong>Key Words:</strong><br>
-                                keywords<br>
+                                <strong>Technology:</strong><br>
+                                tech***<br>
                                 <br>
                                 <strong>Individual/***Group Project</strong>
                             </p>
