--- a/otherProjectsPages/oProj-sharingCompany.html
+++ b/otherProjectsPages/oProj-sharingCompany.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>True Dream Home</title>
+    <title>Sharing Accompany</title>
     <link rel="stylesheet" href="../styles-general.css">
     <link rel="stylesheet" href="../styles-projectPage.css">
     <link rel="stylesheet" href="../css/styles-otherProjectPage.css">
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:wght@100..900&display=swap"
         rel="stylesheet">
 </head>
 
@@ -57,8 +57,8 @@
     <div class="content-body">
         <div class="all-content">
             <div class="oProj-header">
-                <h1 class="oPorj-title">Project Title</h1>
-                <p class="oProj-subtitle">Subtitle</p>
+                <h1 class="oPorj-title">Sharing Accompany</h1>
+                <p class="oProj-subtitle">A pet and human-friendly multifunctional chair</p>
             </div>
             <hr>
         </div>
@@ -72,51 +72,97 @@
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
             <div class="oProj-content">
-                <div class="video">
-                    <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+
+                <div class="align-center">
+                    <div class="oProj-featureImage">
+                        <img src="../assets/otherWorks/sharingCompany/coverImage.jpg" alt="Feature Image">
+                    </div>
                 </div>
+
                 <div class="align-center">
                     <div class="oProj-headerContent">
                         <div class="left-column">
-                            <p class="shortDescription">description*** </p>
+                            <p class="shortDescription">“Sharing Accompany” is a pet and human-friendly multifunctional
+                                chair that provides companionship by offering a shared space for the pets and their
+                                owner that will boost their interaction and harmonious coexistence. Unlike other
+                                existing products that simply design different features for pets and humans, “Enjoy
+                                Company” integrates two parts coherently, providing a seamless combination for both
+                                humans and pets.</p>
                         </div>
                         <div class="right-column">
-                            <p class="tags"><strong>time ***</strong><br>
+                            <p class="tags"><strong>Sep 2022 - Dec 2022</strong><br>
                                 <br>
                                 <strong>Key Words:</strong><br>
-                                keywords<br>
+                                Product Design<br>
+                                UX Research<br>
+                                Pet-Human Coexistence<br>
+                                Interactive Companionship<br>
                                 <br>
-                                <strong>Individual/***Group Project</strong>
+                                <strong>Individual Project</strong>
                             </p>
                         </div>
                     </div>
                 </div>
+
+
+                <div class="videoShowcase">
+                    <div class="video">
+                        <iframe src="https://www.youtube.com/embed/44lfsuaRHw0" frameborder="0"
+                            allowfullscreen></iframe>
+                    </div>
+
+                </div>
                 <div class="align-center">
                     <div class="oProj-keyImagecontainer">
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 1">
+                            <img class="keyImg" src="../assets/otherWorks/sharingCompany/key1.jpg" alt="Image 1">
                         </div>
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 2">
+                            <img class="keyImg" src="../assets/otherWorks/sharingCompany/key2.jpeg" alt="Image 2">
                         </div>
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 3">
+                            <img class="keyImg" src="../assets/otherWorks/sharingCompany/key3.jpeg" alt="Image 3">
                         </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 4">
+                    </div>
+                </div>
+            </div>
+            <!-- Gallery ends -->
+
+            <div class="align-center">
+                <div class="oProj-subSection">
+                    <h2 class="oPorj-subTitle">Process</h2>
+                    <div class="align-center">
+                        <div class="oProj-detailedImage">
+                            <img src="../assets/otherWorks/sharingCompany/proc1.png" alt="Feature Image">
                         </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 5">
+                    </div>
+                    <br><br>
+                    <div class="align-center">
+                        <div class="oProj-detailedImage">
+                            <img src="../assets/otherWorks/sharingCompany/proc2.png" alt="Feature Image">
                         </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 6">
+                    </div>
+                    <br><br>
+                    <div class="align-center">
+                        <div class="oProj-detailedImage">
+                            <img src="../assets/otherWorks/sharingCompany/proc3.png" alt="Feature Image">
+                        </div>
+                    </div>
+                    <div class="align-center">
+                        <div class="oProj-detailedImage">
+                            <img src="../assets/otherWorks/sharingCompany/proc4.png" alt="Feature Image">
+                        </div>
+                    </div>
+                    <div class="align-center">
+                        <div class="oProj-detailedImage">
+                            <img src="../assets/otherWorks/sharingCompany/proc5.jpg" alt="Feature Image">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Gallery ends -->
+
     <!-- ========================================================================================== -->
     <!-- ========================================================================================== -->
     <footer class="footer-alone">
