update all works

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
     <script src="js/script.js"></script>
     <script src="js/allProjectsContent.js"></script>
-    <script src="js/script-projectFilter.js"></script>
+    <script src="js/script-allProjectsMenu.js"></script>
 </body>
 
 </html>
