--- a/otherProjectsPages/dance-fallinOut.html
+++ b/otherProjectsPages/dance-fallinOut.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other Project Template</title>
+    <title>Fallin' Out</title>
     <link rel="stylesheet" href="../styles-general.css">
     <link rel="stylesheet" href="../styles-projectPage.css">
     <link rel="stylesheet" href="../css/styles-otherProjectPage.css">
@@ -57,8 +57,9 @@
     <div class="content-body">
         <div class="all-content">
             <div class="oProj-header">
-                <h1 class="oPorj-title">Project Title</h1>
-                <p class="oProj-subtitle">Subtitle</p>
+                <h1 class="oPorj-title">Fallin' Out</h1>
+                <p class="oProj-subtitle">Jazz & Choreography<br>
+                    2024 NYUSH 88 Countdown Event</p>
             </div>
             <hr>
         </div>
@@ -73,25 +74,20 @@
             <!-- --------------------------------------------------------------------------------- -->
             <div class="oProj-content">
                 <div class="video">
-                    <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/5ZqrvuQv5qc" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="align-center">
                     <div class="oProj-headerContent">
                         <div class="left-column">
-                            <p class="shortDescription">elevator pitch***</p>
-                            <p class="keywords">
-                                <strong>Key Words:</strong><br>
-                                keywords***<br>
-                                <br>
+                            <p class="shortDescription">
+                                Jazz & Choreography<br>
+                                2024 NYUSH 88 Countdown Event<br>
+                                [Dance Cover] Fallin' Out by ALiEN<br>
+                                Dancer: Angela Annie Lulu Mia Sissy
                             </p>
                         </div>
                         <div class="right-column">
-                            <p class="tags"><strong>time ***</strong><br>
-                                <br>
-                                <strong>Technology:</strong><br>
-                                tech***<br>
-                                <br>
-                                <strong>Individual/***Group Project</strong>
+                            <p class="tags"><strong>Mar 2024</strong><br>
                             </p>
                         </div>
                     </div>
@@ -99,22 +95,19 @@
                 <div class="align-center">
                     <div class="oProj-keyImagecontainer">
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 1">
+                            <img class="keyImg" src="../assets/otherWorks/dance/fallKey/key3.png" alt="Image 1">
                         </div>
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 2">
+                            <img class="keyImg" src="../assets/otherWorks/dance/fallKey/key4.png" alt="Image 2">
                         </div>
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 3">
+                            <img class="keyImg" src="../assets/otherWorks/dance/fallKey/key5.png" alt="Image 3">
                         </div>
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 4">
+                            <img class="keyImg" src="../assets/otherWorks/dance/fallKey/key1.jpg" alt="Image 3">
                         </div>
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 5">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 6">
+                            <img class="keyImg" src="../assets/otherWorks/dance/fallKey/key2.jpg" alt="Image 3">
                         </div>
                     </div>
                 </div>
