--- a/otherProjectsPages/dance-hanTangDance.html
+++ b/otherProjectsPages/dance-hanTangDance.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other Project Template</title>
+    <title>Scattered and Reassembled</title>
     <link rel="stylesheet" href="../styles-general.css">
     <link rel="stylesheet" href="../styles-projectPage.css">
     <link rel="stylesheet" href="../css/styles-otherProjectPage.css">
@@ -57,8 +57,9 @@
     <div class="content-body">
         <div class="all-content">
             <div class="oProj-header">
-                <h1 class="oPorj-title">Project Title</h1>
-                <p class="oProj-subtitle">Subtitle</p>
+                <h1 class="oPorj-title">Scattered and Reassembled</h1>
+                <p class="oProj-subtitle">Han-Tang Dance | Boundless Scenery<br>
+                    NYUSH Dance Concert 2024</p>
             </div>
             <hr>
         </div>
@@ -73,25 +74,20 @@
             <!-- --------------------------------------------------------------------------------- -->
             <div class="oProj-content">
                 <div class="video">
-                    <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/ZVAYfdhArJM" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="align-center">
                     <div class="oProj-headerContent">
                         <div class="left-column">
-                            <p class="shortDescription">elevator pitch***</p>
-                            <p class="keywords">
-                                <strong>Key Words:</strong><br>
-                                keywords***<br>
-                                <br>
+                            <p class="shortDescription">Traditional Chinese Han-Tang Dance<br>
+                                Choreographer & Instructor: Siye Tao<br>
+                                Inspired by Yan-Xing technique (雁形)<br>
+                                Music: "Fuugetsu", by ANN J-Classic Orchastra<br>
+                                Performed at NYUSH Dance Concert 2024<br>
                             </p>
                         </div>
                         <div class="right-column">
-                            <p class="tags"><strong>time ***</strong><br>
-                                <br>
-                                <strong>Technology:</strong><br>
-                                tech***<br>
-                                <br>
-                                <strong>Individual/***Group Project</strong>
+                            <p class="tags"><strong>May 2024</strong><br>
                             </p>
                         </div>
                     </div>
@@ -99,23 +95,24 @@
                 <div class="align-center">
                     <div class="oProj-keyImagecontainer">
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 1">
+                            <img class="keyImg" src="../assets/otherWorks/dance/hantangKey/key1.jpg" alt="Image 1">
                         </div>
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 2">
+                            <img class="keyImg" src="../assets/otherWorks/dance/hantangKey/key3.jpg" alt="Image 2">
                         </div>
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 3">
+                            <img class="keyImg" src="../assets/otherWorks/dance/hantangKey/key2.jpg" alt="Image 3">
                         </div>
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 4">
+                            <img class="keyImg" src="../assets/otherWorks/dance/hantangKey/key4.jpg" alt="Image 3">
                         </div>
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 5">
+                            <img class="keyImg" src="../assets/otherWorks/dance/hantangKey/key5.jpg" alt="Image 3">
                         </div>
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 6">
+                            <img class="keyImg" src="../assets/otherWorks/dance/hantangKey/key7.jpg" alt="Image 3">
                         </div>
+
                     </div>
                 </div>
             </div>
