--- a/otherProjectsPages/oProj-foundationKeeper.html
+++ b/otherProjectsPages/oProj-foundationKeeper.html
@@ -95,7 +95,9 @@
                                 Business and Marketing Design<br>
                                 Inclusive Design<br>
                                 <br>
-                                <strong>Group Project</strong>
+                                <strong>Group Project</strong><br>
+                                <strong>Role:</strong>
+                                Researcher & Product Designer
                             </p>
                         </div>
                     </div>
