--- a/otherProjectsPages/oProj-whisperingSanctuary.html
+++ b/otherProjectsPages/oProj-whisperingSanctuary.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other Project Template</title>
+    <title>Whispering Sanctuary</title>
     <link rel="stylesheet" href="../styles-general.css">
     <link rel="stylesheet" href="../styles-projectPage.css">
     <link rel="stylesheet" href="../css/styles-otherProjectPage.css">
@@ -57,8 +57,8 @@
     <div class="content-body">
         <div class="all-content">
             <div class="oProj-header">
-                <h1 class="oPorj-title">Project Title</h1>
-                <p class="oProj-subtitle">Subtitle</p>
+                <h1 class="oPorj-title">Whispering Sanctuary</h1>
+                <p class="oProj-subtitle">Urban public installation for citizen's emotional dwelling.</p>
             </div>
             <hr>
         </div>
@@ -72,44 +72,60 @@
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
             <div class="oProj-content">
-                <div class="video">
-                    <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+                <div class="align-center">
+                    <div class="oProj-featureImage">
+                        <img src="../assets/otherWorks/whisperingSanctuary/coverImage.jpg" alt="Feature Image">
+                    </div>
                 </div>
                 <div class="align-center">
                     <div class="oProj-headerContent">
                         <div class="left-column">
-                            <p class="shortDescription">description*** </p>
+                            <p class="shortDescription">Whispering Sanctuary is an installation that blends urban living
+                                with the therapeutic embrace of nature. The Tree Hole Installations is trying to offer
+                                the citizens a sacred space to unburden their emotions and transform these expressions
+                                into the soothing sounds of nature. Users can hug the tree, and share their thoughts,
+                                worries, and secrets into the integrated microphone. As their voices echo through the
+                                installation, it is played back to the city converting it to the sound of nature,
+                                creating a harmonious exchange between the urban dweller and the natural world.
+                                Whispering Sanctuary not only serves as a refuge for emotional release but also fosters
+                                a profound connection between individuals and the restorative power of nature.</p>
                         </div>
                         <div class="right-column">
-                            <p class="tags"><strong>time ***</strong><br>
+                            <p class="tags"><strong>Fall 2023</strong><br>
                                 <br>
                                 <strong>Key Words:</strong><br>
-                                keywords<br>
+                                Public Installation<br>
+                                Therapeutic<br>
+                                Arduino<br>
+                                Fabrication<br>
                                 <br>
                                 <strong>Individual/***Group Project</strong>
                             </p>
                         </div>
                     </div>
                 </div>
+
+
+                <div class="videoShowcase">
+                    <div class="video">
+                        <iframe src="https://www.youtube.com/embed/3gnDi1O4SvI" frameborder="0"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+
                 <div class="align-center">
                     <div class="oProj-keyImagecontainer">
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 1">
+                            <img class="keyImg" src="../assets/otherWorks/whisperingSanctuary/keyImage/key1.jpg"
+                                alt="Image 1">
                         </div>
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 2">
+                            <img class="keyImg" src="../assets/otherWorks/whisperingSanctuary/keyImage/key2.jpg"
+                                alt="Image 2">
                         </div>
                         <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 3">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 4">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 5">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 6">
+                            <img class="keyImg" src="../assets/otherWorks/whisperingSanctuary/keyImage/key3.jpg"
+                                alt="Image 3" style="aspect-ratio: 2/1;">
                         </div>
                     </div>
                 </div>
