--- a/otherProjectsPages/dance-breakMyHeart.html
+++ b/otherProjectsPages/dance-breakMyHeart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wooden Mandala</title>
+    <title>Break My Heart Myself</title>
     <link rel="stylesheet" href="../styles-general.css">
     <link rel="stylesheet" href="../styles-projectPage.css">
     <link rel="stylesheet" href="../css/styles-otherProjectPage.css">
@@ -57,12 +57,8 @@
     <div class="content-body">
         <div class="all-content">
             <div class="oProj-header">
-                <h1 class="oPorj-title">Wooden Mandala</h1>
-                <p class="oProj-subtitle">
-                    Research project with
-                    <a href="https://aaron-sherwood.com/" style="color: inherit">Aaron Sherwood</a><br>
-                    A Kinetic Installation Interact with Human Breath
-                </p>
+                <h1 class="oPorj-title">Break My Heart Myself</h1>
+                <p class="oProj-subtitle">Partner Dance Cover</p>
             </div>
             <hr>
         </div>
@@ -71,73 +67,42 @@
 
     <!-- ========================================================================================== -->
     <div class="content-body">
-        <div class="oProj-content">
-            <!-- --------------------------------------------------------------------------------- -->
-            <!-- --------------------------------------------------------------------------------- -->
-            <div class="align-center">
-                <div class="oProj-featureImage">
-                    <img src="../assets/otherWorks/woodenMandala/featureImage.jpg" alt="Feature Image">
-                </div>
-            </div>
-            <div class="align-center">
-                <div class="oProj-headerContent">
-                    <div class="left-column">
-                        <p class="shortDescription">"Wooden Mandala" by Aaron Sherwood, is an immersive kinetic
-                            installation with 300 walnut pieces arranged in a Fibonacci spiral on an 8ft diameter
-                            birch wall. Breath-tracking technology responds to users' inhalations, synchronizing
-                            dynamic sound and visual animations with the wooden pieces. In Fall 2022, I focused on
-                            physical computing, constructing and fine-tuning each wooden piece with manual skills
-                            like soldering and drilling. Collaborating with the team, I ensured the seamless
-                            integration of 300+ motors. Responsibilities included debugging, calibrating hardware,
-                            and refining the hardware-software connection. </p>
-                    </div>
-                    <div class="right-column">
-                        <p class="tags"><strong>Fall 2022</strong><br>
-                            <br>
-                            <strong>Key Words:</strong><br>
-                            Kinetic Installation<br>
-                            Physical Computing<br>
-                            Computer Vision<br>
-                            Breath Tracking<br>
-                            <br>
-                            <strong>Role</strong><br>
-                            Research Assistant<br>
-                            <br>
-                            <a href="https://www.aaron-sherwood.com/works/mandala/" style="color: inherit">Porject
-                                Link</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
+        <div class="all-content">
 
-            <div class="videoShowcase">
+            <!-- --------------------------------------------------------------------------------- -->
+            <!-- --------------------------------------------------------------------------------- -->
+            <div class="oProj-content">
                 <div class="video">
-                    <iframe src="https://www.youtube.com/embed/tsIBHcMbRZQ" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/50aeBnYZQd4" frameborder="0" allowfullscreen></iframe>
                 </div>
-            </div>
-
-            <div class="subSection">
-                <h2 class="oPorj-subTitle">Process</h2>
                 <div class="align-center">
-                    <div class="oProj-detailedImage">
-                        <img src="../assets/otherWorks/woodenMandala/key1.jpg" alt="Feature Image">
+                    <div class="oProj-headerContent">
+                        <div class="left-column">
+                            <p class="shortDescription">Partner Dance Cover<br>
+                                music: Break My Heart Myself by Bebe Rexha & Travis Barker<br>
+                                Dancer: Sissy & Mia</p>
+                        </div>
+                        <div class="right-column">
+                            <p class="tags"><strong>Aug 2022</strong><br>
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <br><br>
                 <div class="align-center">
-                    <div class="oProj-detailedImage">
-                        <img src="../assets/otherWorks/woodenMandala/key2.jpg" alt="Feature Image">
-                    </div>
-                </div>
-                <br><br>
-                <div class="align-center">
-                    <div class="oProj-detailedImage">
-                        <img src="../assets/otherWorks/woodenMandala/key3.jpg" alt="Feature Image">
+                    <div class="oProj-keyImagecontainer">
+                        <div class="wrap3content-1">
+                            <img class="keyImg" src="../assets/otherWorks/dance/breakCoverImage.png" alt="Image 1">
+                        </div>
+                        <div class="wrap3content-1">
+                            <img class="keyImg" src="../assets/otherWorks/dance/breakKey/breakKey2.png" alt="Image 2">
+                        </div>
+                        <div class="wrap3content-1">
+                            <img class="keyImg" src="../assets/otherWorks/dance/breakKey/breakKey1.png" alt="Image 3">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
     <!-- Gallery ends -->
     <!-- ========================================================================================== -->
