--- a/otherProjectsPages/fineart-tmallCampus.html
+++ b/otherProjectsPages/fineart-tmallCampus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other Project Template</title>
+    <title>Illustration for Tmall Campus</title>
     <link rel="stylesheet" href="../styles-general.css">
     <link rel="stylesheet" href="../styles-projectPage.css">
     <link rel="stylesheet" href="../css/styles-otherProjectPage.css">
@@ -57,8 +57,7 @@
     <div class="content-body">
         <div class="all-content">
             <div class="oProj-header">
-                <h1 class="oPorj-title">Project Title</h1>
-                <p class="oProj-subtitle">Subtitle</p>
+                <h1 class="oPorj-title">Illustration for Tmall Campus</h1>
             </div>
             <hr>
         </div>
@@ -72,52 +71,22 @@
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
             <div class="oProj-content">
-                <div class="video">
-                    <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="align-center">
-                    <div class="oProj-headerContent">
-                        <div class="left-column">
-                            <p class="shortDescription">elevator pitch***</p>
-                            <p class="keywords">
-                                <strong>Key Words:</strong><br>
-                                keywords***<br>
-                                <br>
-                            </p>
-                        </div>
-                        <div class="right-column">
-                            <p class="tags"><strong>time ***</strong><br>
-                                <br>
-                                <strong>Technology:</strong><br>
-                                tech***<br>
-                                <br>
-                                <strong>Individual/***Group Project</strong>
-                            </p>
+                <div class="wrapcontainer-flexEnd" style="align-items: flex-end;">
+                    <div class="wrap2content-1">
+                        <div class="oProj-featureImage-verticle">
+                            <img src="../assets/otherWorks/fineArts/waterColor.jpg" alt="Feature Image">
                         </div>
                     </div>
-                </div>
-                <div class="align-center">
-                    <div class="oProj-keyImagecontainer">
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 1">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 2">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 3">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 4">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 5">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 6">
-                        </div>
+                    <div class="wrap2content-1">
+                        <p>Illustration for Tmall Campus<br>
+                            Watercolor<br>
+                            2023
+                        </p>
                     </div>
+
                 </div>
+
+
             </div>
         </div>
     </div>
