--- a/otherProjectsPages/oProj-kindRoot.html
+++ b/otherProjectsPages/oProj-kindRoot.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other Project Template</title>
+    <title>Kind Root</title>
     <link rel="stylesheet" href="../styles-general.css">
     <link rel="stylesheet" href="../styles-projectPage.css">
     <link rel="stylesheet" href="../css/styles-otherProjectPage.css">
@@ -57,8 +57,9 @@
     <div class="content-body">
         <div class="all-content">
             <div class="oProj-header">
-                <h1 class="oPorj-title">Project Title</h1>
-                <p class="oProj-subtitle">Subtitle</p>
+                <h1 class="oPorj-title">Kind Root</h1>
+                <p class="oProj-subtitle"> 2 players competitive platformer game<br>
+                    Global Game Jam 2023</p>
             </div>
             <hr>
         </div>
@@ -67,55 +68,71 @@
 
     <!-- ========================================================================================== -->
     <div class="content-body">
-        <div class="all-content">
 
-            <!-- --------------------------------------------------------------------------------- -->
-            <!-- --------------------------------------------------------------------------------- -->
-            <div class="oProj-content">
-                <div class="video">
-                    <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+        <!-- --------------------------------------------------------------------------------- -->
+        <!-- --------------------------------------------------------------------------------- -->
+        <div class="oProj-content">
+            <div class="align-center">
+                <div class="oProj-featureImage">
+                    <img src="../assets/otherWorks/KindRoot/coverImage.png" alt="Feature Image">
                 </div>
-                <div class="align-center">
-                    <div class="oProj-headerContent">
-                        <div class="left-column">
-                            <p class="shortDescription">description*** </p>
-                        </div>
-                        <div class="right-column">
-                            <p class="tags"><strong>time ***</strong><br>
-                                <br>
-                                <strong>Key Words:</strong><br>
-                                keywords<br>
-                                <br>
-                                <strong>Individual/***Group Project</strong>
-                            </p>
-                        </div>
+            </div>
+            <div class="align-center">
+                <div class="oProj-headerContent">
+                    <div class="left-column">
+                        <p class="shortDescription">KindRoot is a competitive platformer game for 2 players – each
+                            player is tied up to a root on the ground and in order to reach the destination on top,
+                            they need to grow their roots into a tree by collecting sunshine, jumping around, and
+                            competing with the other player. The first player to arrive at the top is the winner of
+                            the game. This year’s theme of ‘roots’ is embedded in the core mechanics of our game –
+                            In addition to the gameplay, our character design and scene setting also fit into the
+                            narrative of ‘roots’, such as seeds, sunshine and soil. For our prop design, we want to
+                            create an entertaining experience by encouraging the players to interact with each other
+                            – for example, the knife item allows players to cut off each other’s vine and fall off
+                            the platforms by jumping across those vines. BTW, we are a team that has 13 hours time
+                            difference!</p>
+                        <br>
                     </div>
-                </div>
-                <div class="align-center">
-                    <div class="oProj-keyImagecontainer">
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 1">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 2">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 3">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 4">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 5">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 6">
-                        </div>
+                    <div class="right-column">
+                        <p class="tags"><strong>Sping 2023</strong><br>
+                            <br>
+                            <strong>Key Words:</strong><br>
+                            Game Design and Development<br>
+                            2023 Global Game Jam<br>
+                            Platformer<br>
+                            Competitive Game <br>
+                            <br>
+                            <strong>Individual/***Group Project</strong>
+                        </p>
                     </div>
                 </div>
             </div>
+            <div class="align-center">
+                <div class="oProj-keyImagecontainer">
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets/otherWorks/KindRoot/key1.png" alt="Image 1">
+                    </div>
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets/otherWorks/KindRoot/key2.png" alt="Image 2">
+                    </div>
+
+                </div>
+            </div>
+            <div class="subSection">
+                <h2 class="oPorj-subTitle">More</h2>
+                <a href="https://play.unity.com/mg/other/build_webpub" class="play-now-button">Play
+                    Now!!!</a>
+
+                <p><a href="https://v3.globalgamejam.org/2023/games/kindroot-4">
+                        Project Page on Global Game Jam Website</a></p>
+
+                <p><a href="https://github.com/BillyPung/KindRoot">
+                        Repository Link</a></p>
+            </div>
+
         </div>
     </div>
+
     <!-- Gallery ends -->
     <!-- ========================================================================================== -->
     <!-- ========================================================================================== -->
