--- a/otherProjectsPages/oProj-realMe.html
+++ b/otherProjectsPages/oProj-realMe.html
@@ -67,54 +67,53 @@
 
     <!-- ========================================================================================== -->
     <div class="content-body">
-        <div class="all-content">
+        <div class="oProj-all-content">
 
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
-            <div class="oProj-content">
-                <div class="video">
-                    <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="align-center">
-                    <div class="oProj-headerContent">
-                        <div class="left-column">
-                            <p class="shortDescription">description*** </p>
-                        </div>
-                        <div class="right-column">
-                            <p class="tags"><strong>time ***</strong><br>
-                                <br>
-                                <strong>Key Words:</strong><br>
-                                keywords<br>
-                                <br>
-                                <strong>Individual/***Group Project</strong>
-                            </p>
-                        </div>
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="align-center">
+                <div class="oProj-headerContent">
+                    <div class="left-column">
+                        <p class="shortDescription">description*** </p>
+                    </div>
+                    <div class="right-column">
+                        <p class="tags"><strong>time ***</strong><br>
+                            <br>
+                            <strong>Key Words:</strong><br>
+                            keywords<br>
+                            <br>
+                            <strong>Individual/***Group Project</strong>
+                        </p>
                     </div>
                 </div>
-                <div class="align-center">
-                    <div class="oProj-keyImagecontainer">
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 1">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 2">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 3">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 4">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 5">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 6">
-                        </div>
+            </div>
+            <div class="align-center">
+                <div class="oProj-keyImagecontainer">
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets" alt="Image 1">
+                    </div>
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets" alt="Image 2">
+                    </div>
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets" alt="Image 3">
+                    </div>
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets" alt="Image 4">
+                    </div>
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets" alt="Image 5">
+                    </div>
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets" alt="Image 6">
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <!-- Gallery ends -->
     <!-- ========================================================================================== -->
