all-content finished

--- a/otherProjectsPages/fineart-tmallCampus.html
+++ b/otherProjectsPages/fineart-tmallCampus.html
@@ -90,6 +90,9 @@
             </div>
         </div>
     </div>
+    .gap {
+    height: 100px;
+    }
     <!-- Gallery ends -->
     <!-- ========================================================================================== -->
     <!-- ========================================================================================== -->
