--- a/otherProjectsPages/oProj-beautifyAI.html
+++ b/otherProjectsPages/oProj-beautifyAI.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other Project Template</title>
+    <title>BeautifyAI</title>
     <link rel="stylesheet" href="../styles-general.css">
     <link rel="stylesheet" href="../styles-projectPage.css">
     <link rel="stylesheet" href="../css/styles-otherProjectPage.css">
@@ -57,8 +57,9 @@
     <div class="content-body">
         <div class="all-content">
             <div class="oProj-header">
-                <h1 class="oPorj-title">Project Title</h1>
-                <p class="oProj-subtitle">Subtitle</p>
+                <h1 class="oPorj-title">BeautifyAI</h1>
+                <p class="oProj-subtitle">An AI-powered makeup app design<br>
+                    2023 L'oreal Brainstorm</p>
             </div>
             <hr>
         </div>
@@ -72,50 +73,76 @@
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
             <div class="oProj-content">
-                <div class="video">
-                    <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+
+                <div class="align-center">
+                    <div class="oProj-featureImage">
+                        <img src="../assets/otherWorks/beautifyAI/feature.png" alt="Feature Image">
+                    </div>
                 </div>
+
                 <div class="align-center">
                     <div class="oProj-headerContent">
                         <div class="left-column">
-                            <p class="shortDescription">description*** </p>
+                            <p class="shortDescription">BeautifyAI is an innovative AI-driven
+                                makeup application that leverages Augmented Reality and Web 3.0 trends
+                                to enhance user experiences. The app is designed to operate as a social community
+                                platform where users receive AI-generated makeup suggestions based on facial
+                                recognition, personal preferences, and a makeup toolkit. Additionally, the app provides
+                                real-time augmented reality tutorials to guide users through makeup application.
+                                The project also includes the development of commercialization strategies and plans to
+                                expand the app's functionality to incorporate open world features in the future.</p>
                         </div>
                         <div class="right-column">
-                            <p class="tags"><strong>time ***</strong><br>
+                            <p class="tags"><strong>Spring 2023</strong><br>
                                 <br>
                                 <strong>Key Words:</strong><br>
-                                keywords<br>
+                                Product Design<br>
+                                UX Research<br>
+                                Business and Marketing Design<br>
                                 <br>
-                                <strong>Individual/***Group Project</strong>
+                                <strong>Group Project</strong><br>
+                                <strong>Role:</strong>
+                                Researcher & Product Designer
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="align-center">
-                    <div class="oProj-keyImagecontainer">
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 1">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 2">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 3">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 4">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 5">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 6">
-                        </div>
+            </div>
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/UcqC015qBio" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="align-center">
+                <div class="oProj-subSection" style="margin-top: 50px;">
+                    <h2 class="oPorj-subTitle">Slide Deck</h2>
+                    <div class="oProj-detailedImage">
+                        <img src="../assets/otherWorks/beautifyAI/slide1.png" alt="Feature Image">
+                    </div>
+                    <div class="oProj-detailedImage">
+                        <img src="../assets/otherWorks/beautifyAI/slide2.png" alt="Feature Image">
+                    </div>
+                    <div class="oProj-detailedImage">
+                        <img src="../assets/otherWorks/beautifyAI/slide3.png" alt="Feature Image">
+                    </div>
+                </div>
+            </div>
+
+            <div class="align-center">
+                <div class="oProj-keyImagecontainer">
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets/otherWorks/beautifyAI/detail1.png" alt="Image 1">
+                    </div>
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets/otherWorks/beautifyAI/detail2.png" alt="Image 2">
+                    </div>
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets/otherWorks/beautifyAI/detail3.png" alt="Image 3">
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    </div>
+    <div class="gap"></div>
     <!-- Gallery ends -->
     <!-- ========================================================================================== -->
     <!-- ========================================================================================== -->
