--- a/otherProjectsPages/oProj-futureOfGreens.html
+++ b/otherProjectsPages/oProj-futureOfGreens.html
@@ -133,7 +133,7 @@
         </div>
     </div>
 
-
+    <div class="gap"></div>
     <!-- ========================================================================================== -->
     <!-- ========================================================================================== -->
     <footer class="footer-alone">
