--- a/otherProjectsPages/oProj-kindRoot.html
+++ b/otherProjectsPages/oProj-kindRoot.html
@@ -132,7 +132,7 @@
 
         </div>
     </div>
-
+    <div class="gap"></div>
     <!-- Gallery ends -->
     <!-- ========================================================================================== -->
     <!-- ========================================================================================== -->
