--- a/otherProjectsPages/oProj-realMe.html
+++ b/otherProjectsPages/oProj-realMe.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other Project Template</title>
+    <title>Real Me</title>
     <link rel="stylesheet" href="../styles-general.css">
     <link rel="stylesheet" href="../styles-projectPage.css">
     <link rel="stylesheet" href="../css/styles-otherProjectPage.css">
@@ -57,8 +57,9 @@
     <div class="content-body">
         <div class="all-content">
             <div class="oProj-header">
-                <h1 class="oPorj-title">Project Title</h1>
-                <p class="oProj-subtitle">Subtitle</p>
+                <h1 class="oPorj-title">Real Me</h1>
+                <p class="oProj-subtitle">Chow Tai Fook Branding Competition<br>
+                    Shanghai Champion</p>
             </div>
             <hr>
         </div>
@@ -71,50 +72,60 @@
 
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+            <div class="align-center">
+                <div class="oProj-featureImage">
+                    <img src="../assets/otherWorks/realMe/coverImage.png" alt="Feature Image">
+                </div>
             </div>
             <div class="align-center">
                 <div class="oProj-headerContent">
                     <div class="left-column">
-                        <p class="shortDescription">description*** </p>
+                        <p class="shortDescription">The project focuses on creating a unique jewelry brand that
+                            celebrates individuality and self-expression. The concept is embodied through a series of
+                            specially designed jewelry products and a pop-up store experience that is featured with six
+                            distinctive themes and interactive elements. The pop-up store design is aimed at engaging
+                            users and fostering strong emotional connections between customers and the brand. We hope
+                            this design not only showcases the brand's philosophy but also enhances customer experience
+                            and engagement.</p>
                     </div>
                     <div class="right-column">
-                        <p class="tags"><strong>time ***</strong><br>
+                        <p class="tags"><strong>Fall 2021</strong><br>
                             <br>
                             <strong>Key Words:</strong><br>
-                            keywords<br>
+                            Branding<br>
+                            Pop-up Store Design<br>
+                            Interaction Design<br>
+                            Business and Marketing<br>
                             <br>
-                            <strong>Individual/***Group Project</strong>
+                            <strong>Group Project</strong><br>
+                            <strong>Role:</strong><br>
+                            Pop-up Store Designer<br>
+                            Interaction Designer<br>
                         </p>
                     </div>
                 </div>
             </div>
+
+            <div class="videoShowcase">
+                <div class="video">
+                    <video controls>
+                        <source src="../assets/otherWorks/realMe/video.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+
+            <br><br><br>
             <div class="align-center">
-                <div class="oProj-keyImagecontainer">
-                    <div class="wrap3content-1">
-                        <img class="keyImg" src="../assets" alt="Image 1">
-                    </div>
-                    <div class="wrap3content-1">
-                        <img class="keyImg" src="../assets" alt="Image 2">
-                    </div>
-                    <div class="wrap3content-1">
-                        <img class="keyImg" src="../assets" alt="Image 3">
-                    </div>
-                    <div class="wrap3content-1">
-                        <img class="keyImg" src="../assets" alt="Image 4">
-                    </div>
-                    <div class="wrap3content-1">
-                        <img class="keyImg" src="../assets" alt="Image 5">
-                    </div>
-                    <div class="wrap3content-1">
-                        <img class="keyImg" src="../assets" alt="Image 6">
-                    </div>
+                <div class="oProj-pdfEmbed">
+                    <h2 class="oPorj-subTitle">Slide Deck</h2>
+                    <iframe class="pdf-container" src="../assets/otherWorks/realMe/slides.pdf"></iframe>
                 </div>
             </div>
         </div>
     </div>
     </div>
+
+    <div class="gap"></div>
     <!-- Gallery ends -->
     <!-- ========================================================================================== -->
     <!-- ========================================================================================== -->
