--- a/otherProjectsPages/oProj-arPlayGround.html
+++ b/otherProjectsPages/oProj-arPlayGround.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other Project Template</title>
+    <title>AR Play Ground</title>
     <link rel="stylesheet" href="../styles-general.css">
     <link rel="stylesheet" href="../styles-projectPage.css">
     <link rel="stylesheet" href="../css/styles-otherProjectPage.css">
@@ -57,8 +57,8 @@
     <div class="content-body">
         <div class="all-content">
             <div class="oProj-header">
-                <h1 class="oPorj-title">Project Title</h1>
-                <p class="oProj-subtitle">Subtitle</p>
+                <h1 class="oPorj-title">AR Play Ground</h1>
+                <p class="oProj-subtitle">Interesting creations with AR filters for fun :D</p>
             </div>
             <hr>
         </div>
@@ -73,46 +73,31 @@
             <!-- --------------------------------------------------------------------------------- -->
             <div class="oProj-content">
                 <div class="video">
-                    <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/E6iKp96ykHU" frameborder="0" allowfullscreen></iframe>
                 </div>
-                <div class="align-center">
-                    <div class="oProj-headerContent">
-                        <div class="left-column">
-                            <p class="shortDescription">description*** </p>
+
+                <div class="subSection">
+                    <div class="wrapcontainer">
+                        <div class="wrap2content-1">
+                            <div class="video">
+                                <video controls style="height: 50vh;">
+                                    <source src="../assets/otherWorks/ARPlayGround/video1.mp4" type="video/mp4">
+                                </video>
+                            </div>
                         </div>
-                        <div class="right-column">
-                            <p class="tags"><strong>time ***</strong><br>
-                                <br>
-                                <strong>Key Words:</strong><br>
-                                keywords<br>
-                                <br>
-                                <strong>Individual/***Group Project</strong>
-                            </p>
+                        <div class="wrap2content-1">
+                            <div class="video">
+                                <video controls style="height: 50vh;">
+                                    <source src="../assets/otherWorks/ARPlayGround/video2.mp4" type="video/mp4">
+                                </video>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="align-center">
-                    <div class="oProj-keyImagecontainer">
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 1">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 2">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 3">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 4">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 5">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 6">
-                        </div>
-                    </div>
-                </div>
+
+
+
+
             </div>
         </div>
     </div>
