--- a/otherProjectsPages/oProj-tmallCampus.html
+++ b/otherProjectsPages/oProj-tmallCampus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other Project Template</title>
+    <title>UI Design for Tmall Campus</title>
     <link rel="stylesheet" href="../styles-general.css">
     <link rel="stylesheet" href="../styles-projectPage.css">
     <link rel="stylesheet" href="../css/styles-otherProjectPage.css">
@@ -57,8 +57,10 @@
     <div class="content-body">
         <div class="all-content">
             <div class="oProj-header">
-                <h1 class="oPorj-title">Project Title</h1>
-                <p class="oProj-subtitle">Subtitle</p>
+                <h1 class="oPorj-title">UI Design for Tmall Campus</h1>
+                <p class="oProj-subtitle">User interface design of the Tmall Campus app main page<br>
+                    Internship at Tmall Campus, Alibaba Group<br>
+                    60% integrated into the app's final development</p>
             </div>
             <hr>
         </div>
@@ -72,44 +74,35 @@
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
             <div class="oProj-content">
-                <div class="video">
-                    <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+                <div class="align-center">
+                    <div class="oProj-featureImage">
+                        <img src="../assets/otherWorks/TmallCampus/coverImage.png" alt="Feature Image">
+                    </div>
                 </div>
                 <div class="align-center">
                     <div class="oProj-headerContent">
                         <div class="left-column">
-                            <p class="shortDescription">description*** </p>
-                        </div>
-                        <div class="right-column">
-                            <p class="tags"><strong>time ***</strong><br>
-                                <br>
-                                <strong>Key Words:</strong><br>
-                                keywords<br>
-                                <br>
-                                <strong>Individual/***Group Project</strong>
+                            <p class="shortDescription">Independently designed the main user interface of the Tmall
+                                Campus app, including icons, tiles, and banners, showcasing various visual styles, with
+                                60% integrated into the app’s final development. <br><br>
+                                Collaborated with marketing and tech teams, ensuring projects were well-aligned with
+                                operational requirements.<br><br>
+                                Produced marketing materials, including posters, co-branded packaging, and e-commerce
+                                banners.<br><br>
                             </p>
                         </div>
-                    </div>
-                </div>
-                <div class="align-center">
-                    <div class="oProj-keyImagecontainer">
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 1">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 2">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 3">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 4">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 5">
-                        </div>
-                        <div class="wrap3content-1">
-                            <img class="keyImg" src="../assets" alt="Image 6">
+                        <div class="right-column">
+                            <p class="tags"><strong>Summer 2023</strong><br>
+                                <br>
+                                <strong>Key Words:</strong><br>
+                                UI Design<br>
+                                UX Design<br>
+                                Sketch<br>
+                                <br>
+                                <strong>Group Project</strong><br>
+                                <strong>Role:</strong><br>
+                                UI/UX Designer<br>
+                            </p>
                         </div>
                     </div>
                 </div>
