--- a/otherProjectsPages/oProj-whisperingSanctuary.html
+++ b/otherProjectsPages/oProj-whisperingSanctuary.html
@@ -132,6 +132,7 @@
             </div>
         </div>
     </div>
+    <div class="gap"></div>
     <!-- Gallery ends -->
     <!-- ========================================================================================== -->
     <!-- ========================================================================================== -->
